[gd_scene load_steps=5 format=3 uid="uid://n1c63y2s0pjj"]

[ext_resource type="Script" path="res://levels/main_menu/menu_level.gd" id="1_vnu2s"]
[ext_resource type="PackedScene" uid="uid://dodt5cesi7jvv" path="res://camera/camera.tscn" id="2_6vm68"]
[ext_resource type="FontFile" uid="uid://biqvjoct3mvo7" path="res://ui/fonts/PublicPixel.otf" id="2_42m8x"]
[ext_resource type="PackedScene" uid="uid://t4j713qylqb1" path="res://ui/button/button.tscn" id="4_66rjp"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vnu2s")

[node name="Camera" parent="." instance=ExtResource("2_6vm68")]
anchor_mode = 0

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.376471, 0.376471, 0.439216, 1)

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Main/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_42m8x")
text = "N1GHTF4LL"

[node name="Play" parent="Main/VBoxContainer" instance=ExtResource("4_66rjp")]
layout_mode = 2
text = "Play"

[node name="Options" parent="Main/VBoxContainer" instance=ExtResource("4_66rjp")]
layout_mode = 2
text = "Options"

[node name="Quit" parent="Main/VBoxContainer" instance=ExtResource("4_66rjp")]
layout_mode = 2
text = "Quit"

[node name="Options" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2

[connection signal="pressed" from="Main/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
